--- a/package.json
+++ b/package.json
@@ -16,12 +16,13 @@
     "@radix-ui/react-label": "^2.1.4",
     "@radix-ui/react-select": "^2.2.2",
     "@radix-ui/react-slot": "^1.2.0",
+    "@tailwindcss/oxide": "^4.1.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "lightningcss": "^1.29.3",
     "lucide-react": "^0.503.0",
-    "next": "15.3.1",
+    "next": "^15.3.1",
     "next-themes": "^0.4.6",
     "prisma": "^6.6.0",
     "react": "^19.0.0",
